--- a/styles.css
+++ b/styles.css
@@ -462,3 +462,51 @@ body::before {
     background: var(--primary-color);
     color: var(--background-color);
 }
+
+#toggle-menu {
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    border: none;
+    background: transparent;
+    color: var(--primary-color);
+    cursor: pointer;
+    transition: all 0.1s ease;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 3;
+}
+
+#toggle-menu:active {
+    background-color: var(--primary-color);
+    color: var(--background-color);
+    transform: translateX(-50%) scale(0.9);
+}
+
+#toggle-menu::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--primary-color);
+    opacity: 0;
+    transition: opacity 0.2s ease;
+}
+
+#toggle-menu:active::after {
+    opacity: 0.3;
+    transition: opacity 0s;
+}
+
+#toggle-menu:hover {
+    transform: translateX(-50%) scale(1.1);
+}
